# golden-raspberry-awards-api

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 596f21810b72_create_movie_producer_table.py  a1359d2ef5ec_create_movies_table.py  c3b93eae316f_create_table_producers.py  cae7ecc61cac_add_winner_column_to_movies.py  d2851158e412_create_movie_studio_table.py  e23037fbeb64_create_studios_table.py
app/: config.py  main.py
app/db/: database.py
app/models/: __init__.py  base.py  movie.py  movie_producer.py  movie_studio.py  producer.py  studio.py
app/repositories/: __init__.py  movie_repository.py  producer_repository.py  studio_repository.py
app/schemas/: __init__.py  award_interval.py  csv_importer.py  movie.py  producer.py  studio.py
app/services/: __init__.py  award_interval_service.py  csv_importer.py  csv_importer_service.py  movie_service.py  producer_service.py  studio_service.py
app/utils/: logger.py
infrastructure/: Dockerfile  deployment.yaml  docker-compose.yml  main.tf
tests/: .last_test_run  conftest.py
tests/api/: test_main.py
tests/models/: __init__.py  test_movie.py  test_producer.py  test_studio.py
tests/repositories/: __init__.py  test_movie_repository.py  test_producer_repository.py  test_studio_repository.py
tests/services/: __init__.py  test_award_interval_service.py  test_csv_importer.py  test_csv_importer_service.py  test_movie_service.py  test_producer_service.py  test_studio_service.py
(+16 files in other folders)
