[tool.poetry]
name = "golden-raspberry-awards-api"
version = "0.0.1"
description = "API RESTful para possibilitar a leitura da lista de indicados e vencedores da categoria Pior Filme do Golden Raspberry Awards"
authors = ["Maykon Granemann <maykondgranemann@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
