[tool.poetry]
name = "golden-raspberry-awards-api"
version = "0.0.1"
description = "API RESTful para possibilitar a leitura da lista de indicados e vencedores da categoria Pior Filme do Golden Raspberry Awards"
authors = ["Maykon Granemann <maykondgranemann@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
types-pytz = "^2025.1.0.20250204"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
files = ["app"]